<resources>
    <string name="app_name">DirectorsCut</string>
    <string name="fotl_temp">0</string>
    <string name="fotr_temp">0</string>
    <string name="name_FOTL">FENCER B</string>
    <string name="name_FOTR">FENCER A</string>
    <string name="timerBtnInit">BEGIN</string>
    <string name="ScorePlus">+</string>
    <string name="ScoreDouble"><![CDATA[< DOUBLE >]]></string>
    <string name="ScoreMinus">-</string>
    <string name="PenaltyFlagL">CARD</string>
    <string name="PenaltyFlagR">CARD</string>
    <string name="clockTime">3:00</string>
    <string name="bout_reset">Clear</string>
    <string name="bout_submit">Continue</string>
    <string name="timeBtnStart">START</string>
    <string name="timeBtnStop">STOP</string>
    <string name="timeBtnFinal">HOLD TO RESET</string>
    <string name="btnMinuteActive">RESUME BOUT</string>
    <string name="btnMinuteInactive">1:00</string>

    // Pool
    <string name="label_name">Fencer</string>
    <string name="label_opNum">Opponent_Number</string>
    <string name="label_number">No.</string>
    <string name="label_result">V|TS|TR|Ind|Pl</string>
    <string name="bout_order">Bout</string>
    <string name="label_sc_v">V</string>
    <string name="label_sc_ts">TS</string>
    <string name="label_sv_tr">TR</string>
    <string name="label_sv_ind">Ind</string>
    <string name="label_sv_pl">Pl</string>
    <string name="boutBox_fullNames">Name_FOTR - Name_FOTL</string>
    <string name="boutBox_fencerIDs">(idL-idR)</string>
    <string name="boutBox_scores">L-R</string>
    <string name="result_num">NUM</string>
    <string name="results_v">V</string>
    <string name="result_ts">TS</string>
    <string name="result_tr">TR</string>
    <string name="result_ind">IND</string>
    <string name="result_pl">PL</string>
    <string name="number_of_fencers">Number of Fencers:</string>
    <string name="score_limit">Score Limit:</string>
    <string name="bout_only">Bout Only</string>
    <string name="create_pool">Create Pool</string>
    <string name="card_fencer_name">Fencer Name</string>
    <string name="card_side">Side</string>
    <string name="card_black">BLACK</string>
    <string name="card_red">RED</string>
    <string name="card_yellow">YELLOW</string>
    <string name="number_picker">Number Picker</string>
    <string name="fd_name">Name:</string>
    <string name="fd_rating">Rating:</string>
    <string name="fd_club">Club:</string>
    <string name="fd_def_club">Unattached</string>
    <string name="fd_def_rating">Unrated</string>
    <string name="fd_def_name">Fencer</string>
    <string name="fd_btn_save">Save</string>
    <string name="fd_def_index">Fencer #</string>
    <string name="ps_add_fencer">Add Fencer</string>
    <string name="ps_def_scorelimit">15</string>
    <string name="ps_def_numfencers">5</string>
    <string name="fd_year">Year</string>
    <string name="fd_def_year">Year</string>
</resources>
