<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFencerDetail"
    android:background="@android:color/holo_blue_dark">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fd_cl_attributes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/fd_tv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fd_tv_name"
            app:layout_constraintStart_toStartOf="@id/fd_et_name"

            android:layout_marginBottom="12dp"

            android:textSize="30sp"
            android:text="@string/fd_def_index"
            />

        <TextView
            android:id="@+id/fd_tv_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginTop="75dp"
            android:gravity="end"

            android:textSize="26sp"
            android:text="@string/fd_name"
            />

        <TextView
            android:id="@+id/fd_tv_rating"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/fd_tv_name"
            app:layout_constraintEnd_toEndOf="@+id/fd_tv_name"

            android:layout_marginTop="4dp"
            android:gravity="end"

            android:textSize="26sp"
            android:text="@string/fd_rating"
            />

        <TextView
            android:id="@+id/fd_tv_club"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/fd_tv_rating"
            app:layout_constraintEnd_toEndOf="@+id/fd_tv_rating"

            android:layout_marginTop="4dp"
            android:gravity="end"

            android:textSize="26sp"
            android:text="@string/fd_club"
            />

        <EditText
            android:id="@+id/fd_et_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/fd_tv_name"
            app:layout_constraintBottom_toBottomOf="@+id/fd_tv_name"

            android:hint="@string/fd_def_name"
            android:inputType="text"
            android:gravity="bottom|start"

            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/fd_et_rating"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/fd_tv_rating"
            app:layout_constraintBottom_toBottomOf="@+id/fd_tv_rating"

            android:hint="@string/fd_def_rating"
            android:inputType="number"
            android:gravity="bottom|start"

            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/fd_et_club"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/fd_tv_club"
            app:layout_constraintBottom_toBottomOf="@+id/fd_tv_club"

            android:hint="@string/fd_def_club"
            android:inputType="number"
            android:gravity="bottom|start"

            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    </android.support.constraint.ConstraintLayout>

    <Button
        app:layout_constraintTop_toBottomOf="@+id/fd_cl_attributes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"

        android:text="@string/fd_btn_save"
        android:textSize="32sp"
        />

</android.support.constraint.ConstraintLayout>