<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_boutBox"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/tv_boutBox_IDs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boutBox_fencerIDs"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_boutBox_scores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boutBox_scores"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_boutBox_fullNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutBox_fullNames"
        android:gravity="center"/>

</LinearLayout>