<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityScorekeeper">

    <!-- STATUS -->
    <LinearLayout
        android:id="@+id/LL_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:weightSum="3">

        <Button
            android:id="@+id/bout_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bout_reset"
            android:layout_weight="1"
            android:background="@color/buttonHighlight1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/bout_minuteBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnMinuteInactive"
            android:background="@color/buttonHighlight2"
            />

        <Button
            android:id="@+id/bout_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bout_submit"
            android:layout_weight="1"
            android:background="@color/buttonHighlight1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </LinearLayout>

    <!-- CLOCK-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/LL_Clock_Box"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LL_Header"
        app:layout_constraintBottom_toTopOf="@id/LL_name_bar">
        <TextView
            android:id="@+id/clock_timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cl_subtimer"
            android:background="@color/timeInitial"
            android:gravity="center"
            android:text="@string/clockTime"
            android:textSize="144sp"
            />

        <Button
            android:id="@+id/bt_edit_time"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@drawable/background_border"
            android:drawableLeft="@drawable/ic_timer_black"
            android:layout_marginTop="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/sk_time_set"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_subtimer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tv_subtimer_left_ind"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background"/>
            <TextView
                android:id="@+id/tv_subtimer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_subtimer_right_ind"
                app:layout_constraintStart_toEndOf="@id/tv_subtimer_left_ind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:gravity="center"
                android:text="@string/subtimer_start"
                android:textColor="@android:color/white"
                android:textSize="32sp"/>
            <TextView
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_subtimer_right_ind"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background"/>
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

    <!-- NAMES -->
    <LinearLayout
        android:id="@+id/LL_name_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/LL_Clock_Box"
        app:layout_constraintBottom_toTopOf="@id/LL_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_name_FOTL"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorFOTL"
            android:text="@string/name_FOTL"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_name_FOTR"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorFOTR"
            android:text="@string/name_FOTR"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- CONTROLS -->
    <LinearLayout
        android:id="@+id/LL_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- TOP -->
        <LinearLayout
            android:id="@+id/control_top"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/plus_FOTL"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorFOTL"
                android:text="@string/ScorePlus"
                android:textColor="#000000" />

            <Button
                android:id="@+id/double_touch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#000000"
                android:text="@string/ScoreDouble"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/plus_FOTR"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFOTR"
                android:text="@string/ScorePlus"
                android:textColor="#000000" />
        </LinearLayout>

        <!-- MID -->
        <LinearLayout
            android:id="@+id/control_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/score_FOTL"
                android:background="@android:color/black"
                android:textColor="@color/colorFOTL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fotl_temp"
                android:textSize="90sp" />

            <Button
                android:id="@+id/time_toggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/timeBtnInit"
                android:text="@string/timerBtnInit"
                android:textColor="@color/timeBtnText"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@id/radial_card_left" />

            <TextView
                android:id="@+id/score_FOTR"
                android:background="@android:color/black"
                android:textColor="@color/colorFOTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fotr_temp"
                android:textSize="90sp" />
        </LinearLayout>

        <!-- BOT -->
        <LinearLayout
            android:id="@+id/control_bot"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/cardview_dark_background">

            <Button
                android:id="@+id/minus_FOTL"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFOTL"
                android:text="@string/ScoreMinus"
                android:textColor="#000000" />

            <Button
                android:id="@+id/radial_card_left"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_margin="2dp"
                android:background="@android:color/black"
                android:textColor="@color/colorFOTL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/PenaltyFlagL"
                android:onClick="cardPopup"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/radial_card_right"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/black"
                android:textColor="@color/colorFOTR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/PenaltyFlagR"
                android:onClick="cardPopup"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/minus_FOTR"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFOTR"
                android:text="@string/ScoreMinus"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>